--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A conventional commits client for padronized commit messages.",
   "main": "./lib/index.js",
   "scripts": {
-    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "start": "node --loader ts-node/esm src/index.ts",
     "build": "tsc -p .",
-    "local": "npm i --location=global && conv"
+    "local": "sudo npm i --location=global && gitconv",
+    "lint": "eslint --fix --ext .ts,.tsx ."
   },
   "keywords": [
     "conventional",
@@ -14,17 +15,27 @@
     "vdiorio"
   ],
   "bin": {
-    "conv": "./lib/index.js"
+    "gitconv": "./lib/index.js"
   },
   "author": "vdiorio",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^8.2.1",
+    "@types/inquirer-autocomplete-prompt": "^1.3.4",
     "@types/node": "^18.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^8.2.4",
+    "inquirer-autocomplete-prompt": "^2.0.0"
   }
 }
