--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node --loader ts-node/esm src/index.ts",
     "build": "tsc -p .",
-    "local": "sudo npm i --location=global && gitconv",
+    "local": "npm run build && sudo npm i --location=global && gitconv",
     "lint": "eslint --fix --ext .ts,.tsx ."
   },
   "keywords": [
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
