--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "colors": "^1.4.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^8.2.4",
-    "inquirer-autocomplete-prompt": "^2.0.0"
+    "inquirer-autocomplete-prompt": "^2.0.0",
+    "execa": "5.1.1"
   }
 }
