--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
-    "fuzzy": "^0.1.3",
     "inquirer": "^8.2.4",
     "inquirer-autocomplete-prompt": "^2.0.0",
-    "execa": "5.1.1"
+    "execa": "5.1.1",
+    "fuse.js": "6.6.2"
   }
 }
