--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "gitconv": "./lib/index.js"
   },
   "scripts": {
-    "start": "node --loader ts-node/esm src/index.ts",
+    "start": "node ./lib/index.js",
     "build": "tsc -p .",
-    "local": "npm run build && npm i . --location=global",
+    "local": "node ./lib/index.js",
     "lint": "eslint --fix --ext .ts,.tsx .",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install"
   },
@@ -30,23 +30,29 @@
   "homepage": "https://github.com/vdiorio/gitconv-cli",
   "license": "ISC",
   "devDependencies": {
+    "@nrwl/react": "^19.5.7",
     "@types/inquirer": "^8.2.1",
     "@types/inquirer-autocomplete-prompt": "^1.3.4",
     "@types/node": "^18.6.2",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "nodemon": "^2.0.19",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "colors": "^1.4.0",
+    "commander": "^12.1.0",
     "execa": "5.1.1",
     "fuse.js": "6.6.2",
+    "gitconv": "file:",
     "inquirer": "^8.2.4",
     "inquirer-autocomplete-prompt": "^2.0.0"
   }
