--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,15 +5,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3 # Updated to the latest version
+
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3 # Updated to the latest version
         with:
-          node-version: '14.20.0'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "14.20.0"
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Get current version from package.json
+        id: get_version
+        run: echo "CURRENT_VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
+
       - name: Install dependencies and build 🔧
-        run: npm install && npm run build
+        run: |
+          set -e  # Exit immediately if a command exits with a non-zero status
+          npm install && npm run build
+        env:
+          CURRENT_VERSION: ${{ env.CURRENT_VERSION }}
+
       - name: Publish package on NPM 📦
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          CURRENT_VERSION: ${{ env.CURRENT_VERSION }}
