--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitconv",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "A conventional commits client for padronized commit messages.",
   "main": "./lib/index.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node ./lib/index.js",
-    "build": "tsc -p .",
+    "build": "tsc -p . && copyfiles package.json lib/",
     "local": "node ./lib/index.js",
     "lint": "eslint --fix --ext .ts,.tsx .",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install"
@@ -30,12 +30,12 @@
   "homepage": "https://github.com/vdiorio/gitconv-cli",
   "license": "ISC",
   "devDependencies": {
-    "@nrwl/react": "^19.5.7",
     "@types/inquirer": "^8.2.1",
     "@types/inquirer-autocomplete-prompt": "^1.3.4",
     "@types/node": "^18.6.2",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-google": "^0.14.0",
@@ -49,7 +49,6 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
-    "commander": "^12.1.0",
     "execa": "5.1.1",
     "fuse.js": "6.6.2",
     "gitconv": "file:",
